--- a/manifests/pv.yaml
+++ b/manifests/pv.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: smartbox-dev-nfs
+  annotations:
+    volume.beta.kubernetes.io/mount-options: "-o nolock"
 spec:
   capacity:
     storage: 10Gi
